fixed post wrapping

--- a/styles/Post.module.css
+++ b/styles/Post.module.css
@@ -78,3 +78,7 @@
 .badge:hover{
     box-shadow: 0 0 20px 2px rgb(255 255 255 / 60%);
 }
+
+.content {
+    overflow-wrap: anywhere;
+}
